put the main landmark

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="box centered-container">
+  <main class="box centered-container">
 
     <div class="box card-container">
       <div class="card-header"></div>
@@ -59,7 +59,7 @@
       <a href="https://www.frontendmentor.io/profile/faisalridwan55" target="_blank">Faisal Ridwan</a>.
     </div>
 
-  </div>
+  </main>
 </body>
 
 </html>
